# ohc_account_invoice

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  generate-openapi.yml
config/: config.toml  config.toml.example
deployment/: configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  ingress.yaml  minio.yaml  namespace.yaml  secret.yaml  service.yaml  undeploy.sh
docs/sql/: sql_20260610.sql
src/: __init__.py  config.py  main.py
src/application/: __init__.py  errors.py  generate_service.py  logging_config.py  template_service.py  utils.py
src/domain/: __init__.py  template_filler_service.py
src/domain/fillers/: __init__.py  basic_specification_filler.py  dhf_index_filler.py  individual_test_spec_filler.py  labeling_specification_filter.py  packaging_design_specification_filler.py  product_environment_assessment_filler.py  project_plan_filler.py  ptf_index_filler.py  user_manual_specification_filler.py  verification_plan_filler.py
src/infrastructure/: __init__.py  document_repository.py  services_registry.py  storage_service.py  template_service.py  word_image_utils.py
src/interfaces/: __init__.py
src/interfaces/middleware/: auth.py
src/interfaces/routers/: generate.py  system.py  templates.py
src/interfaces/schemas/: __init__.py  templates.py
src/swagger/: .gitkeep  openapi.json  swagger.html
static/templates/excel/: DHF_INDEX.xlsx  取扱説明書設計仕様書.xlsx
tests/: test_generate_service.py  test_template_service.py
tests/integration/: test_e2e_generate.py
tools/: generate_openapi.py
(+23 files in other folders)
